ForkProccessTest/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_native-lib_armeabi-v7a.stdout.txt
ninja: Entering directory `E:\AndroidStudioprojects\youbesun\LearnExamples\ForkProccessTest\.cxx\cmake\debug\armeabi-v7a'
[1/2] Building CXX object CMakeFiles/native-lib.dir/native-lib.cpp.o
FAILED: CMakeFiles/native-lib.dir/native-lib.cpp.o 
E:\Users\wfy\AppData\Local\Android\sdk\ndk\21.1.6352462\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=armv7-none-linux-androideabi21 --gcc-toolchain=E:/Users/wfy/AppData/Local/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=E:/Users/wfy/AppData/Local/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64/sysroot  -Dnative_lib_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/native-lib.cpp.o -MF CMakeFiles\native-lib.dir\native-lib.cpp.o.d -o CMakeFiles/native-lib.dir/native-lib.cpp.o -c E:/AndroidStudioprojects/youbesun/LearnExamples/ForkProccessTest/src/main/cpp/native-lib.cpp
E:/AndroidStudioprojects/youbesun/LearnExamples/ForkProccessTest/src/main/cpp/native-lib.cpp:78:47: error: 'open' called with O_CREAT or O_TMPFILE, but missing mode
    m_fd = open(file.c_str(), O_RDWR | S_IRWXU);
                                              ^
E:/Users/wfy/AppData/Local/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\bits/fortify/fcntl.h:65:9: note: from 'diagnose_if' attribute on 'open':
        __clang_error_if(__open_modes_useful(flags), "'open' " __open_too_few_args_error) {
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/Users/wfy/AppData/Local/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include\sys/cdefs.h:134:52: note: expanded from macro '__clang_error_if'
#define __clang_error_if(cond, msg) __attribute__((diagnose_if(cond, msg, "error")))
                                                   ^           ~~~~
1 error generated.
ninja: build stopped: subcommand failed.
